--- a/plugins/tiles/pom.xml
+++ b/plugins/tiles/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>velocity-engine-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
         </dependency>
