WW-4692 Extracts Url encoder/decoder into dedicated interfaces/classes

--- a/core/src/main/resources/org/apache/struts2/default.properties
+++ b/core/src/main/resources/org/apache/struts2/default.properties
@@ -279,4 +279,7 @@ struts.ognl.expressionMaxLength=256
 ### These formatters are using a slightly different patterns, please check JavaDocs of both and more details is in WW-5016
 struts.date.formatter=dateTimeFormatter
 
+struts.url.encoder=strutsUrlEncoder
+struts.url.decoder=strutsUrlDecoder
+
 ### END SNIPPET: complete_file
