--- a/pom.xml
+++ b/pom.xml
@@ -1081,7 +1081,7 @@
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
-                <version>7.4.0</version>
+                <version>7.5</version><!-- the latest version supporting Java 1.8 -->
             </dependency>
 
             <dependency>
