WW-5264 Moves XSLT result into a dedicated plugin

--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -100,6 +100,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-xslt-plugin</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
