--- a/core/src/main/resources/org/apache/struts2/default.properties
+++ b/core/src/main/resources/org/apache/struts2/default.properties
@@ -61,9 +61,10 @@ struts.objectFactory.spring.enableAopSupport = false
 # struts.objectTypeDeterminer = notiger
 
 ### Parser to handle HTTP POST requests, encoded using the MIME-type multipart/form-data
-# struts.multipart.parser=cos
-# struts.multipart.parser=pell
-# struts.multipart.parser=jakarta-stream
+# struts.multipart.parser=servlet - using Servlet API 3.1
+# struts.multipart.parser=jakarta - using Commons Fileupload
+# struts.multipart.parser=pell - deprecated
+# struts.multipart.parser=jakarta-stream - using Commons Fileupload with stream support
 struts.multipart.parser=jakarta
 ### Uses javax.servlet.context.tempdir by default
 struts.multipart.saveDir=
