--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,7 @@
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-javadoc-plugin</artifactId>
                             <configuration>
-                                <additionalparam>-Xdoclint:none</additionalparam>
+                                <additionalJOption>-Xdoclint:none</additionalJOption>
                             </configuration>
                         </plugin>
                     </plugins>
