--- a/apps/pom.xml
+++ b/apps/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>2.5.31-SNAPSHOT</version>
+        <version>2.5.31</version>
     </parent>
     <artifactId>struts2-apps</artifactId>
     <packaging>pom</packaging>
