--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-apps</artifactId>
-        <version>2.5.31</version>
+        <version>2.5.32-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-showcase</artifactId>
