--- a/plugins/xslt/pom.xml
+++ b/plugins/xslt/pom.xml
@@ -37,8 +37,8 @@
             <artifactId>struts2-junit-plugin</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>jsp-api</artifactId>
+            <groupId>jakarta.servlet.jsp</groupId>
+            <artifactId>jakarta.servlet.jsp-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
