WW-5334 Correct struts2-xslt-plugin pom

--- a/plugins/xslt/pom.xml
+++ b/plugins/xslt/pom.xml
@@ -35,6 +35,7 @@
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-junit-plugin</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
