--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -66,6 +66,7 @@
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-core</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Test dependencies -->
