WW-5334 Extract Portlet test case into own module

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -50,6 +50,7 @@
         <module>pell-multipart</module>
         <module>plexus</module>
         <module>portlet</module>
+        <module>portlet-junit</module>
         <module>portlet-mocks</module>
         <module>portlet-tiles</module>
         <module>rest</module>
