WW-5334 Add struts2-junit-plugin as test scope to struts2-velocity-plugin

--- a/plugins/velocity/pom.xml
+++ b/plugins/velocity/pom.xml
@@ -55,6 +55,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-junit-plugin</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
