WW-5334 Fix log4j binding

--- a/plugins/junit/pom.xml
+++ b/plugins/junit/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>struts2-convention-plugin</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.23.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
