--- a/pom.xml
+++ b/pom.xml
@@ -1041,6 +1041,11 @@
                 <artifactId>log4j-slf4j-impl</artifactId>
                 <version>${log4j2.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>1.23.0</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.testng</groupId>
