--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,7 @@ on:
     branches:
       - master
       - file-manager-support-koowei
+
 permissions: read-all
 
 env:
@@ -46,12 +47,12 @@ jobs:
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v3
         with:
-          distribution: adopt
+          distribution: 'adopt'
           java-version: ${{ matrix.java }}
       - name: Build with Maven on Java ${{ matrix.java }}
         if: matrix.java != '17'
         run: mvn -B -V -DskipAssembly verify --no-transfer-progress
-        - name: Compile and Run FooTest
+      - name: Compile and Run FooTest
         run: |
           mvn -B -V compile test -Dtest=com.opensymphony.xwork2.FooTest
       - name: Code coverage on Java ${{ matrix.java }}
@@ -60,3 +61,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
         run: mvn -B -V -Pcoverage -DskipAssembly verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar --no-transfer-progress
+
