--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,8 @@ on:
       - master
       - file-manager-support-koowei
       - dashboard-enhance-yongyaowen
+      - file-upload-progress-indicator-elvin
+      
 
 permissions: read-all
 
