--- a/plugins/junit/pom.xml
+++ b/plugins/junit/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>6.3.0.1</version>
+        <version>6.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-junit-plugin</artifactId>
