WW-5347 Upgrades to commons-digester3 ver 3.2

--- a/plugins/osgi/pom.xml
+++ b/plugins/osgi/pom.xml
@@ -85,8 +85,8 @@
         </dependency>
 
         <dependency>
-            <groupId>commons-digester</groupId>
-            <artifactId>commons-digester</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-digester3</artifactId>
         </dependency>
 
         <dependency>
