--- a/plugins/tiles/pom.xml
+++ b/plugins/tiles/pom.xml
@@ -67,8 +67,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>commons-digester</groupId>
-            <artifactId>commons-digester</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-digester3</artifactId>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
