Unify HtmlUnit versions

--- a/pom.xml
+++ b/pom.xml
@@ -969,6 +969,13 @@
             </dependency>
 
             <dependency>
+                <groupId>net.sourceforge.htmlunit</groupId>
+                <artifactId>htmlunit</artifactId>
+                <version>2.70.0</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>jmock</groupId>
                 <artifactId>jmock</artifactId>
                 <version>1.2.0</version>
