--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <!-- dependency versions in alphanumeric order -->
-        <asm.version>9.5</asm.version>
+        <asm.version>9.6</asm.version>
         <jackson.version>2.15.3</jackson.version>
         <log4j2.version>2.20.0</log4j2.version>
         <ognl.version>3.3.4</ognl.version>
@@ -764,6 +764,10 @@
                     <exclusion>
                         <groupId>commons-logging</groupId>
                         <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>asm</groupId>
+                        <artifactId>asm</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
