WW-5355 Rename cache types

--- a/core/src/main/resources/org/apache/struts2/default.properties
+++ b/core/src/main/resources/org/apache/struts2/default.properties
@@ -238,14 +238,14 @@ struts.ognl.enableExpressionCache=true
 # struts.ognl.beanInfoCacheFactory=customOgnlBeanInfoCacheFactory
 
 ### Specifies the type of cache to use for parsed OGNL expressions. See StrutsConstants class for further information.
-struts.ognl.expressionCacheType=caffeine_wtlfu
+struts.ognl.expressionCacheType=wtlfu
 
 ### Specifies the maximum cache size for parsed OGNL expressions. This should be configured based on the cache type
 ### chosen and application-specific needs.
 struts.ognl.expressionCacheMaxSize=10000
 
 ### Specifies the type of cache to use for BeanInfo objects. See StrutsConstants class for further information.
-struts.ognl.beanInfoCacheType=caffeine_wtlfu
+struts.ognl.beanInfoCacheType=wtlfu
 
 ### Specifies the maximum cache size for BeanInfo objects. This should be configured based on the cache type chosen and
 ### application-specific needs.
