--- a/plugins/osgi/src/test/resources/struts-osgi.properties
+++ b/plugins/osgi/src/test/resources/struts-osgi.properties
@@ -22,5 +22,5 @@ scanning.package.includes = com.opensymphony.xwork2, \
                             ognl, \
                             freemarker, \
                             org.apache.velocity, \
-                            javax.servlet;2.5
+                            jakarta.servlet;2.5
 
