--- a/pom.xml
+++ b/pom.xml
@@ -691,9 +691,9 @@
             </dependency>
 
             <dependency>
-                <groupId>opensymphony</groupId>
+                <groupId>org.sitemesh</groupId>
                 <artifactId>sitemesh</artifactId>
-                <version>2.5.0</version>
+                <version>3.2.0-M2</version>
             </dependency>
 
             <!-- Velocity -->
