--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -48,7 +48,10 @@
         <module>oval</module>
         <module>plexus</module>
         <module>rest</module>
-        <module>sitemesh</module>
+        
+        <!-- TODO
+        <module>sitemesh</module-->
+        
         <module>spring</module>
         <module>testng</module>
         <module>tiles</module>
